modifications(authentification + justifications des questions)

--- a/Symfony/src/Innovit/GeneralBundle/Resources/config/routing.yml
+++ b/Symfony/src/Innovit/GeneralBundle/Resources/config/routing.yml
@@ -2,4 +2,4 @@ innovit_general_homepage:
     pattern:  /general/{name}
     defaults: { _controller: InnovitGeneralBundle:General:index }
     requirements:
-        name: qsnous|flashactus|Accueil|liensutiles
+        name: qsnous|flashactus|Accueil|liensutiles|login
