--- a/Symfony/app/config/security.yml
+++ b/Symfony/app/config/security.yml
@@ -16,6 +16,9 @@ security:
             form_login:
                 provider: fos_userbundle
                 csrf_provider: form.csrf_provider
+                always_use_default_target_path : true
+                default_target_path: /general/qsnous
+                use_referer : true
             logout:       true
             anonymous:    true
     access_control:
