--- a/Symfony/src/Innovit/GeneralBundle/Resources/config/routing.yml
+++ b/Symfony/src/Innovit/GeneralBundle/Resources/config/routing.yml
@@ -3,3 +3,6 @@ innovit_general_homepage:
     defaults: { _controller: InnovitGeneralBundle:General:index }
     requirements:
         name: qsnous|flashactus|Accueil|liensutiles
+innovit_haha:
+    pattern:  /haha
+    defaults: { _controller: InnovitGeneralBundle:General:haha }
