--- a/Symfony/app/config/security.yml
+++ b/Symfony/app/config/security.yml
@@ -17,9 +17,11 @@ security:
                 provider: fos_userbundle
                 csrf_provider: form.csrf_provider
                 always_use_default_target_path : true
-                default_target_path: /general/qsnous
+                default_target_path: /general/redirection
                 use_referer : true
-            logout:       true
+            logout:      
+                path: /logout
+                target: /general/Accueil
             anonymous:    true
     access_control:
         - { path: ^/login$, role: IS_AUTHENTICATED_ANONYMOUSLY }
